[package]
name = "wasm-gl"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
# ‼️ cgmath = "0.18" # Removed
env_logger = "0.11.8"
log = "0.4"
pollster = "0.4"
wgpu = "27.0.0"
winit = { version = "0.30", features = ["android-native-activity"] }
# ‼️ [dependencies.image] # Removed
# ‼️ version = "0.25.8"
# ‼️ default-features = false
# ‼️ features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

# ‼️ [build-dependencies] # Removed entire section
# ‼️ anyhow = "1.0"
# ‼️ fs_extra = "1.2"
# ‼️ glob = "0.3"
