[package]
name = "wasm-gl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
log = "0.4"

console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

winit = "0.30"
